python/testData/inspections/PyCompatibilityInspection/typeAliasStatements.py
<error descr="Python version 3.11 does not support type alias statements" textAttributesKey="ERRORS_ATTRIBUTES"><warning descr="Python versions 2.7, 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11 do not support type alias statements" textAttributesKey="WARNING_ATTRIBUTES">type MyType = str</warning></error>